FIX: carousel disalignment

--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,12 @@
 #hero-car-game-img {
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .carousel-container {
-  width: 900px;
+  /* width: fit-content; */
   overflow: hidden;
-  margin: 0 auto;
 }
 
 .carousel-wrapper {
